fix: copy cam to cpu

--- a/colab/iip_model_cam.ipynb
+++ b/colab/iip_model_cam.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "iip_model_cam.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -112,7 +110,7 @@
         "    sm = cmap.ScalarMappable(norm=norm, cmap=cm)\n",
         "    return sm.to_rgba(x)[:,:,:3]"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -149,7 +147,7 @@
         "id": "SjOzpufD_tlw",
         "outputId": "a48bac7a-db44-45f0-e0cc-405042e28fb4"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -197,7 +195,7 @@
         "\n",
         "model_linear = model.classifier[0]"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -287,7 +285,7 @@
         "# ants and bees\n",
         "#uri = \"https://www.oneindia.com/img/2016/01/28-1453966107-ants-honey-bee.jpg\""
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -319,7 +317,7 @@
         "plt.imshow(cimg)\n",
         "plt.show()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -377,7 +375,7 @@
         "for i in range(top_prob.size(0)):\n",
         "    print(categories[top_catid[i]], \"(\", top_catid[i].cpu().numpy(), \")\", \"{:.2f} %\".format(top_prob[i].item()*100))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -412,7 +410,7 @@
         "    cam = class_activation_mapper(features_out).squeeze()\n",
         "    cam_avgs = cam.mean([-2,-1]).cpu().numpy().tolist()\n",
         "\n",
-        "ccam = toColorImg(cam[top_catid[0]], cm='bwr_r')#.transpose(2,0,1)\n",
+        "ccam = toColorImg(cam[top_catid[0]].cpu(), cm='bwr_r')#.transpose(2,0,1)\n",
         "# resize cam\n",
         "ccam_normalizer = transforms.Compose([\n",
         "        transforms.ToTensor(),\n",
@@ -430,7 +428,7 @@
         "for cat, acm in zip(categories, cam_avgs): print(cat, \"avg={:.2f},  \".format(acm), end='')\n",
         "plotFeaturemaps(cam.detach().cpu().numpy(), mag=2)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
